dotNetRDF Toolkit for Windows/Mono
==================================

A Toolkit of command line utilities and GUI tools for working with RDF data

Version 1.0.3

dotNetRDF Project 2009-13
dotnetrdf-develop@lists.sf.net

Change Log
----------

This represents a summary of additions, changes and removals for the dotNetRDF Toolkit
for Windows/Mono detailed by Tool.

Note: While some tools may have no explicit changes all tools benefit from being upgraded to the latest release of the
dotNetRDF core library which typically incorporates bug fixes and performance improvements so you should still
upgrade to these latest versions.

rdfConvert

rdfEditor (Not available under Mono)

rdfOptStats
   
rdfQuery

rdfServer

rdfServerGUI
 
rdfWebDeploy

soh 

SparqlGUI

StoreManager
- Assorted user interface improvements (TOOLS-390)
- Split Stardog connection definitions into 1.x and 2.x
- Improved how Recent and Favourite Connections are managed (TOOLS-377)
- Ensure that the New Connection window does not clip some options (TOOLS-377)
- Support saving and restoring active connections between sessions (TOOLS-377)